<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ByAdmin.EditSpecUser" >

    <TextView
        android:id="@+id/t2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/editUser"
        android:textColor="#1258AC"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/isid"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        app:counterEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput1"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout1"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="9">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idInput1"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/ID"
            android:inputType="textEmailAddress"
            android:maxLength="9" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fnamInput2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/fname"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lnameInput2"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:hint="@string/lname" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/laycode2"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/codeInput2"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:hint="@string/code"
            android:password="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layphone2"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNum2"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:hint="@string/phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/savebtn"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#1258AC"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <View
        android:id="@+id/view11"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="10dp"
        android:background="#1258AC" />

</LinearLayout>