<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#28682A"
    tools:context=".ByManager.ManagerSetPayment">

    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/setHolidays"
        android:textColor="#033011"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/caretakerNamePay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:shadowColor="#033713"
        android:text="@string/setHolidays"
        android:textColor="#03250D"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/paymentTitle"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:gravity="center|left"
        android:text="@string/seforThis"
        android:textColor="#F3F6FA"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/curmonth"
            android:textColor="#0E0D0D"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/numofmonthPa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="4"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView62"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/curpay"
            android:textColor="#0E0D0D"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/setPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:inputType="date" />

    </LinearLayout>

    <Button
        android:id="@+id/saveForPay"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#007200"
        android:elevation="10dp"
        android:shadowColor="#FFE9E9"
        android:shadowDx="10"
        android:shadowDy="10"
        android:text="@string/save"
        android:textColor="#F7F0F0"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/cancelForPay"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#007200"
        android:elevation="10dp"
        android:shadowColor="#FFE9E9"
        android:shadowDx="10"
        android:shadowDy="10"
        android:text="@string/cancel"
        android:textColor="#F7F0F0"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>
